[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_Srajan_Chourasia"
version = "0.0.2"
authors = [
  { name="Srajan Chourasia", email="srajan.chourasia.20031@iitgoa.ac.in" },
]
description = "A small example package for CS310 LAB Assignment!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/srajan-kiyotaka"
"Bug Tracker" = "https://github.com/srajan-kiyotaka"
